# puzzle-solvers

./: .gitignore  Makefile  README.md  pyproject.toml
no-four-in-a-row/: Makefile  README.md  pyproject.toml
no-four-in-a-row/boards/: bigger-board-2.csv  bigger-board-original.csv  bigger-board.csv  invalid-board.csv  valid-board-forcible.csv  valid-board-not-forcible.csv
no-four-in-a-row/src/: decorators.py  game_board.py  game_service.py  main.py  models.py  solver_service.py
no-four-in-a-row/tests/unit/: game_board_test.py  game_service_test.py
